[package]
name = "example_libafl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm = { path = ".." }
libafl = { git = "https://github.com/AFLplusplus/LibAFL", rev = "04c8e96923b2843d795b8a57d9cb05f4fd1d14f5" }
portpicker = "0.1.1"
